Fix the landing pages page that was not centered.

--- a/src/rendering/src/assets/css/layout/layout.css
+++ b/src/rendering/src/assets/css/layout/layout.css
@@ -28,6 +28,10 @@ footer {
       @apply !max-w-[51vw] !px-[10vw];
     }
   }
+
+  &.container-centered {
+    @apply mx-auto;
+  }
 }
 
 .container.container-fullwidth {
